# github-network-audit

./: .gitignore  .pre-commit-config.yaml  README.md  REUSE.toml  pyproject.toml
.github/: actionlint.yaml
.github/workflows/: build-test-release.yaml  build-test.yaml  testing.yaml
resources/: VEXXHOST.txt
scripts/: connection_test.py
src/github_network_audit/: __init__.py  __main__.py  cli.py  collector.py  reporter.py
tests/: __init__.py  test_connection_test.py  test_reporter.py
